[build-system]
requires = ["setuptools>=40.8.0", "wheel"]

[project]

name = "reduct-cli"
version = "0.9.0"
description = "CLI client for ReductStore"
requires-python = ">=3.8"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["cli", "reductstore", "tool", "database", "time series database"]
authors = [
    { email = "atimin@gmail.com", name = "Alexey Timin" }
]
maintainers = [
    { email = "atimin@gmail.com", name = "Alexey Timin" }
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3 :: Only",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Topic :: Database :: Front-Ends"
]

dependencies = [
    "reduct-py~=1.7",
    "click~=8.1",
    "tomlkit~=0.12",
    "rich~=13.6",
    "pydantic>=2.0,<3",
]

[project.optional-dependencies]
test = [
    "pytest~=7.4",
    "pytest-mock~=3.12",
    "pytest-asyncio~=0.21"
]

lint = ["pylint~=3.0"]
format = ["black~=23.10"]
docs = [
    "mkdocs~=1.5",
    "mkdocs-material~=9.4",
    "plantuml-markdown~=3.9",
    "mkdocs-same-dir~=0.1",
    "mkdocs-click~=0.8"
]

[project.urls]
ReductStorage = "https://www.reduct.store"
Documentation = "https://cli.reduct.store"
SourceCode = "https://github.com/reductstore/reduct-cli"
Changelog = "https://github.com/reductstore/reduct-cli/blob/main/CHANGELOG.md"
Twitter = "https://twitter.com/ReductStore"
Blog = "https://dev.to/reductstore"


[project.scripts]
reduct-cli = "reduct_cli:main"
rcli = "reduct_cli:main"

[tool.pylint.MASTER]
good-names = "ls,rm"
disable = ["fixme", "duplicate-code"]
extension-pkg-whitelist = "pydantic"
